[project]
name = "beancountimporters"
version = "0.0.2"
description = "A bunch of importers for beancount (2.X)/fava."
readme = "README.md"
authors = [
    { name = "George Kokinis", email = "george.kokinis@gmail.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "beancount==2.3.6",
    "coverage==7.6.9",
    "fava>=1.29",
    "numpy==1.26.4",
    "pypdf>=5.1.0",
    "quiffen>=2.0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["."]
